@@ -2,6 +2,9 @@ Change Notes
 ============
 
 2009-07-02 jbornema
+	- Fixed bug in autoCachePaths mode where the first aggregated cells had been not removed form the cache and aggregated again
+
+2009-07-02 jbornema
 	- FindUtil class for Cube browsing.
 	- Added log() method to Cube class.
 	- CubeFlexCalc support new autoCachePaths mode, using new class CachePath and CachePathDimensionDepth,
